--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "nprogress": "^0.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
+    "vue-wait": "^1.4.8",
     "vuetify": "^2.2.11",
     "vuex": "^3.1.3"
   },
